# Document-Tools

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  i18n.py  pyproject.toml  streamlit_app.py  styles.py  utils.py
.streamlit/: config.toml
data/format_specs/: README.md  csas_publication.json  csas_theme.xml
pages/: format.py  proofread.py  settings.py  shrink.py  translate.py
scripts/: measure_ram.py
src/: doc_formatter.py  doc_localizer.py  doc_shrinker.py  doc_styler.py  helpers.py  i18n.py  proofread_cli.py  proofreader.py  shrink_cli.py  styles.py  subprocess_helpers.py  tab_guard.py
tests/: conftest.py  test_doc_formatter.py  test_doc_localizer.py  test_doc_shrinker.py  test_doc_styler.py  test_helpers.py  test_i18n.py  test_proofreader.py  test_subprocess_helpers.py  test_tab_guard.py  test_utils.py
tests/fixtures/: test_document_formatting_en.docx  test_document_structure_en.docx  test_document_structure_fr.docx  test_figure_table_numbers.docx  test_figure_table_numbers.txt  test_formatting_errors_en.docx  test_table_replacements_en.docx  test_table_replacements_fr.docx
