[project]
name = "document-tools"
version = "0.1.0"
description = "Streamlit app for translating and shrinking .docx files via Azure AI Translator."
requires-python = ">=3.13"
dependencies = [
    "azure-ai-projects>=1.0.0",
    "azure-ai-translation-document>=1.1.0",
    "azure-core>=1.39.0",
    "azure-identity>=1.19.0",
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "pillow>=11.0.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.1",
    "rich>=15.0.0",
    "streamlit>=1.46.0",
]
